2006-08-10  John Finlay  <finlay@moeraki.com>

	* docs/reference/entities.docbook.in: 
	* docs/reference/pygobject-ref.xml: 
	* docs/Makefile.am: 
	* configure.ac:
	Use builddate.xml for the builddate entity and have builddate.xml be
	updated when the docs are built not during configure time.

2006-08-08  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac:  Post release version bump.

=== 2.11.2 ===
2006-08-08  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-08-07  Johan Dahlin  <jdahlin@async.com.br>

	* docs/Makefile.am ($(HTML_DATA)): Fix parallel build 
	(#350225, Ed Catmur)

2006-08-06  Johan Dahlin  <johan@gnome.org>

	* m4/as-expand.m4: New file to workaround automake silliness

	* docs/xsl/fixxref.py.in: New script

	* docs/Makefile.am (XSLFILES): Add fixxref.py script, moved in from
	PyGTK.

	* docs/xsl/html.xsl: Do not use shade.verbatim, set the background
	color and border as a normal html tag to avoid an external
	stylesheet.

2006-08-04  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post release version bump

=== 2.11.1 ===
2006-08-04  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

	* README: Update, some s/PyGTK/PyGObject/

	* configure.ac:
	* docs/Makefile.am:
	* docs/reference/.cvsignore:
	* docs/reference/entities.docbook.in:
	* docs/reference/pygobject-ref.xml:
	Clean up the build date/version mess I created.
	Now it's created during configure time and properly included in
	the docbook files. Also make sure distcheck passes

2006-08-04  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Add hack to disable libtool checking for g++ and
	g77 (copied from libglade).

2006-07-29  John Finlay  <finlay@moeraki.com>

	* gobject/pygobject.h (pyg_param_gvalue_from_pyobject): Fix define
	to point to the correct function pointer field.

2006-07-29  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygflags.c (pyg_flags_add): idem.

	* gobject/pygenum.c (pyg_enum_add): Give a more explicit error